# NeuralNetworks

./: .gitignore  CMakeLists.txt  nn.cpp  part1Data.xlsx
